@@ -7,7 +7,7 @@
     <title>Raggle Windows Documentation</title>
     <meta name='author'         content='Paul Duncan' />
     <meta name='description'    content='Raggle Windows Documentation' />
-    <meta name='keywords'       content='rss channels feeds' />
+    <meta name='keywords'       content='raggle windows win32' />
 
     <!--link title='default' href='extras/web_ui/inc/feed_list.css'
       rel='stylesheet' type='text/css' /-->
@@ -25,17 +25,16 @@
       Steps to start <a href='http://www.raggle.org/'>Raggle</a>:
 
       <ol>
-	      <li>Select <code>Raggle Server</code> from the Raggle Start Menu</li>
-	      <li>Select <code>Raggle Client</code> from the Raggle Start Menu</li>
+	      <li>Select <code>Raggle</code> from the Raggle Start Menu</li>
 	      <li>Wait a few minutes while <a href='http://www.raggle.org/'>Raggle</a> updates feeds.</li>
       </ol>
     </p>
 
     <p>
-      There are all sorts of bugs at the moment.  Some feeds don't
-      parse, the UI is counter-intuitive, a bunch of features aren't
-      accessible from the web interface, and there is a complete lack
-      of documentation.  But, it's a start.
+      There are all sorts of bugs at the moment.  The UI is
+      counter-intuitive, a bunch of features aren't accessible from the
+      web interface, and there is a complete lack of documentation.
+      But hey, it's a start. ;-)
     </p>
   </body>
 </html>
